--- a/style.css
+++ b/style.css
@@ -5,14 +5,114 @@ body, html {
     height: 100%;
 }
 
+* {
+    box-sizing: border-box;    
+}
+
 body {
     background-color: #000000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+/* clearfix */
+
+.cf:after, .cf:before {
+    display: table;
+    content: " ";
+}
+
+.cf:after {
+    clear: both;
+}
+
+/* end clearfix */
+
+/* Button Style */
+
+.btn {
+    display: inline-block;
+    padding: .375rem 1rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #0275d8;
+    border-color: #0275d8;
+}
+
+.btn-block {
+    width: 100%;
+}
+
+/* End Button Style */
 
 .container {
     width: 960px;
     min-height: 100%;
     margin : 0 auto;
     background-color: #FFFFFF;
+}
+
+header {
+    width: 100%;
+    position: relative;
+    height: 10em;
+    background-color: cornflowerblue;
+    padding-top: 15px;
+}
+
+h1 {
+   color: #000000; 
+   text-align: center;
+}
+
+header h1 {
+    text-align: center;
+    color: #FFFFFF;
+}
+
+header nav {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 0 25px 0 0;
+}
+
+header nav ul {
+    margin: 0;
+    padding: 0;
+}
+header nav ul li{
+    display: inline-block;
+    list-style-type: none;
+    font-weight: bold;
+    padding: 0 20px;
+    border-bottom: 5px solid cornflowerblue;
+    
+}
+
+header nav ul li:hover {
+    border-bottom: 5px solid #FFFFFF;
+}
+
+header nav ul li a {
+    text-decoration: none;
+}
+
+.view {
+    margin: 40px 40px;
+    min-height: 25em;
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px #000000;
+    padding: 20px;
+    background-color: azure;
 }
