Activating state in UI router with different types of controller configuration

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
     border-radius: .25rem;
 }
 
+a.btn {
+    text-decoration: none;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #0275d8;
@@ -51,6 +55,23 @@ body {
 
 .btn-block {
     width: 100%;
+    margin-bottom:20px;
+}
+
+.btn-block:last-child {
+    margin-bottom:0;
+}
+
+
+.btn-nav {
+    width: 32%;
+    padding: 2rem .375rem;
+}
+
+.btn-container {
+    padding: 30px 40px;
+    width: 100%;
+    text-align: center;
 }
 
 /* End Button Style */
@@ -60,7 +81,10 @@ body {
     min-height: 100%;
     margin : 0 auto;
     background-color: #FFFFFF;
+    padding-bottom: 30px;
 }
+
+
 
 header {
     width: 100%;
@@ -108,11 +132,40 @@ header nav ul li a {
     text-decoration: none;
 }
 
+
+
+
 .view {
-    margin: 40px 40px;
+    margin: 40px;
     min-height: 25em;
     border-radius: 10px;
     box-shadow: inset 0 0 2px #000000;
     padding: 20px;
     background-color: azure;
+}
+
+
+
+/*Navigation Link*/
+
+.nav-link {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.nav-link a {
+    font-size: 1.4rem;
+    line-height: 1.4em;
+    color: #ff3a55;
+    font-weight: bold;
+}
+
+/*Info*/
+
+.info {
+    margin: 20px 40px;
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px #000000;
+    padding: 10px;
+    background-color: #adf1ff;
 }
